# lbox

./: Dockerfile  README.md  common.py  dependencies.txt  expirator.py  lbox.conf  lbox.py  litterbox.conf  litterbox.py  pyproject.toml
css/: style.css
html/: index.html
js/: lbox.js
lbox/: __init__.py  expirator.py  webapp.py
lbox/appfiles/css/: style.css
lbox/appfiles/html/: index.html
lbox/appfiles/js/: lbox.js
