[project]
name = "lbox"
description = "Litterbox clone-ish"
readme = "README.md"
authors = [
    { name = "Javier Llopis", email = "javier@llopis.me" }
    ]
dynamic = [ "version" ]
dependencies = [ "bottle", "bjoern" ]
requires-python = ">= 3.8"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["lbox"]

[project.scripts]
lbox = "lbox.lbox:main"
expirator = "lbox.expirator:main"

[tool.setuptools.dynamic]
version = {attr = "lbox.__version__"}
