[project]
name = "lbox"
description = "Litterbox clone-ish"
readme = "README.md"
authors = [
    { name = "Javier Llopis", email = "javier@llopis.me" }
    ]
dynamic = [ "version" ]
dependencies = [ "bottle", "bjoern" ]
requires-python = ">= 3.10"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
#packages = ["lbox"]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
lbox = "lbox.webapp:main"
expirator = "lbox.expirator:main"

[tool.setuptools.dynamic]
version = {attr = "lbox.__version__"}

[tool.setuptools.package-data]
"*" = [ "*.html", "*.js", "*.css", "*.png" ]
