[project]
name = "lbox"
description = "Serve files via HTTP for a set duration of time."
readme = "README.md"
authors = [
    { name = "Javier Llopis", email = "javier@llopis.me" }
    ]
dynamic = [ "version" ]
dependencies = [ "bottle", "bjoern" ]
requires-python = ">= 3.10"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
lbox = "lbox.webapp:main"

[tool.setuptools.dynamic]
version = {attr = "lbox.__version__"}

[tool.setuptools.package-data]
"*" = [ "*.html", "*.js", "*.css", "*.png" ]
